index.md updated by BiEdit

--- a/index.html
+++ b/index.html
@@ -672,27 +672,47 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#rc-circuits" raw="## RC Circuits" lo="341" class="">
+            <a href="#rc-circuits" raw="## RC Circuits" lo="341">
               <span class="toctext">RC Circuits</span>
             </a>
           </li>
           <li>
-            <a href="#magnetic-force-on-charged-particles" raw="## Magnetic Force on Charged Particles" lo="355" class="highlighted">
+            <a href="#cross-product-review" raw="## Cross--Product Review" lo="355" class="">
+              <span class="toctext">Cross–Product Review</span>
+            </a>
+          </li>
+          <li>
+            <a href="#magnetic-force-on-charged-particles" raw="## Magnetic Force on Charged Particles" lo="357" class="">
               <span class="toctext">Magnetic Force on Charged Particles</span>
             </a>
           </li>
           <li>
-            <a href="#magnetic-force-on-wires" raw="## Magnetic Force on Wires" lo="370">
+            <a href="#magnetic-force-on-wires" raw="## Magnetic Force on Wires" lo="372">
               <span class="toctext">Magnetic Force on Wires</span>
             </a>
           </li>
           <li>
-            <a href="#the-biot-savart-law" raw="## The Biot--Savart law" lo="384">
-              <span class="toctext">The Biot–Savart law</span>
+            <a href="#magnetic-field-of-a-moving-charge" raw="## Magnetic Field of a Moving Charge" lo="386" class="">
+              <span class="toctext">Magnetic Field of a Moving Charge</span>
             </a>
           </li>
           <li>
-            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="386">
+            <a href="#the-biot-savart-law" raw="## The Biot--Savart Law" lo="387">
+              <span class="toctext">The Biot–Savart Law</span>
+            </a>
+          </li>
+          <li>
+            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="389">
+              <span class="toctext">Magnetic Flux</span>
+            </a>
+          </li>
+          <li>
+            <a href="#lenz-s-law" raw="## Lenz's Law" lo="391">
+              <span class="toctext">Lenz’s Law</span>
+            </a>
+          </li>
+          <li>
+            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="393">
               <span class="toctext">RLC and AC Circuits</span>
             </a>
           </li>
@@ -1787,7 +1807,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="341" lf="341" class=""><a name="rc-circuits" number="4.17" lo="341" raw="## RC Circuits" class="anchor hanchor" href="#rc-circuits"><span class="hnumber">4.17</span>&nbsp;<span class="htext">RC Circuits</span></a></h2>
+        <h2 lo="341" lf="341"><a name="rc-circuits" number="4.17" lo="341" raw="## RC Circuits" class="anchor hanchor" href="#rc-circuits"><span class="hnumber">4.17</span>&nbsp;<span class="htext">RC Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">341</span></div>
       </div>
       <div class="block">
@@ -1821,88 +1841,140 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="355" lf="355" class="highlighted"><a name="magnetic-force-on-charged-particles" number="4.18" lo="355" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles"><span class="hnumber">4.18</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
+        <h2 lo="355" lf="355" class=""><a name="cross-product-review" number="4.18" lo="355" raw="## Cross--Product Review" class="anchor hanchor" href="#cross-product-review"><span class="hnumber">4.18</span>&nbsp;<span class="htext">Cross–Product Review</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">355</span></div>
       </div>
       <div class="block">
-        <ul lo="357" lf="368" class="compact">
-          <li markerlength="2" padlength="0" lo="357" lf="368" class="">
+        <ul lo="357" lf="367" class="compact">
+          <li markerlength="2" padlength="0" lo="357" lf="367" class="">
             <div class="block">
-              <p padlength="0" lo="357" lf="357" class="">Activity - Magnetic Force on Charged Particles</p>
+              <p padlength="0" lo="357" lf="357" class="">Activity - Cross Products</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">357</span></div>
             </div>
             <div class="block">
-              <ul lo="358" lf="368" class="compact">
-                <li markerlength="2" padlength="0" lo="358" lf="358" class="">
+              <ul lo="358" lf="367" class="compact">
+                <li markerlength="2" padlength="0" lo="358" lf="362" class="">
                   <div class="block">
-                    <p padlength="0" lo="358" lf="358" class=""><a href="Magnetic_Force/README.html">Instructor notes</a></p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">358</span></div>
+                    <p padlength="0" lo="358" lf="362" class="">Documents: | <a href="Cross_Products/Cross_Products.pdf">pdf</a> | <a href="Cross_Products/Cross_Products-solutions.pdf">pdf solns</a> | <a href="Cross_Products/Cross_Products.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">358-362</span></div>
                   </div>
                 </li>
-                <li markerlength="2" padlength="0" lo="359" lf="363" class="">
+                <li markerlength="2" padlength="0" lo="363" lf="367" class="">
                   <div class="block">
-                    <p padlength="0" lo="359" lf="363" class="active">Documents: | <a href="Magnetic_Force/Magnetic_Force.pdf">pdf</a> | <a href="Magnetic_Force/Magnetic_Force-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force/Magnetic_Force.html">html</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">359-363</span></div>
-                  </div>
-                </li>
-                <li markerlength="2" padlength="0" lo="364" lf="368" class="">
-                  <div class="block">
-                    <p padlength="0" lo="364" lf="368" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/(Magnetic_Force">Github</a> | <a href="(Magnetic_Force/(Magnetic_Force.md">Markdown</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">364-368</span></div>
+                    <p padlength="0" lo="363" lf="367" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/(Magnetic_Force">Github</a> | <a href="Cross_Products/Cross_Products.md">Markdown</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">363-367</span></div>
                   </div>
                 </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">358-368</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">358-367</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">357-368</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">357-367</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="370" lf="370"><a name="magnetic-force-on-wires" number="4.19" lo="370" raw="## Magnetic Force on Wires" class="anchor hanchor" href="#magnetic-force-on-wires"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Wires</span></a></h2>
+        <h2 lo="369" lf="369" class="highlighted"><a name="magnetic-force-on-charged-particles" number="4.19" lo="369" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles" lf="369"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">370</span></div>
       </div>
       <div class="block">
-        <ul lo="372" lf="382" class="compact">
-          <li markerlength="2" padlength="0" lo="372" lf="377">
+        <ul lo="371" lf="382" class="compact">
+          <li markerlength="2" padlength="0" lo="371" lf="382" class="">
             <div class="block">
-              <p padlength="0" lo="372" lf="372">Activity - Magnetic Force on Wires</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">372</span></div>
+              <p padlength="0" lo="371" lf="371" class="">Activity - Magnetic Force on Charged Particles</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">371</span></div>
             </div>
             <div class="block">
-              <ul lo="373" lf="377" class="compact">
-                <li markerlength="2" padlength="0" lo="373" lf="377">
+              <ul lo="372" lf="382" class="compact">
+                <li markerlength="2" padlength="0" lo="372" lf="372" class="">
                   <div class="block">
-                    <p padlength="0" lo="373" lf="377">Documents: | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.pdf">pdf</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html">html</a> |</p>
+                    <p padlength="0" lo="372" lf="372" class=""><a href="Magnetic_Force/README.html">Instructor notes</a></p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">372</span></div>
+                  </div>
+                </li>
+                <li markerlength="2" padlength="0" lo="373" lf="377" class="">
+                  <div class="block">
+                    <p padlength="0" lo="373" lf="377" class="">Documents: | <a href="Magnetic_Force/Magnetic_Force.pdf">pdf</a> | <a href="Magnetic_Force/Magnetic_Force-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force/Magnetic_Force.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">373-377</span></div>
                   </div>
                 </li>
+                <li markerlength="2" padlength="0" lo="378" lf="382" class="">
+                  <div class="block">
+                    <p padlength="0" lo="378" lf="382" class="active">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/(Magnetic_Force">Github</a> | <a href="Magnetic_Force/Magnetic_Force.md">Markdown</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">378-382</span></div>
+                  </div>
+                </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">373-377</span></div>
-            </div>
-          </li>
-          <li markerlength="2" padlength="0" lo="378" lf="384">
-            <div class="block">
-              <p padlength="0" lo="378" lf="382">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_on_Wires">Github</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.md!" target="_blank">Markdown</a> | </p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">378-382</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">372-382</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">372-382</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">371-382</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="384" lf="384"><a name="the-biot-savart-law" number="4.20" lo="384" raw="## The Biot--Savart law" class="anchor hanchor" href="#the-biot-savart-law"><span class="hnumber">4.20</span>&nbsp;<span class="htext">The Biot–Savart law</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">384</span></div>
+        <h2 lo="384" lf="384" class=""><a name="magnetic-force-on-wires" number="4.20" lo="384" raw="## Magnetic Force on Wires" class="anchor hanchor" href="#magnetic-force-on-wires" lf="384"><span class="hnumber">4.20</span>&nbsp;<span class="htext">Magnetic Force on Wires</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">385</span></div>
+      </div>
+      <div class="block">
+        <ul lo="386" lf="396" class="compact">
+          <li markerlength="2" padlength="0" lo="386" lf="391">
+            <div class="block">
+              <p padlength="0" lo="386" lf="386">Activity - Magnetic Force on Wires</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">393-399</span></div>
+            </div>
+            <div class="block">
+              <ul lo="387" lf="391" class="compact">
+                <li markerlength="2" padlength="0" lo="387" lf="391">
+                  <div class="block">
+                    <p padlength="0" lo="387" lf="391">Documents: | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.pdf">pdf</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">393-399</span></div>
+                  </div>
+                </li>
+              </ul>
+              <div class="block-info" style="display: none;"><span class="line-numbers">393-399</span></div>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="392" lf="398">
+            <div class="block">
+              <p padlength="0" lo="392" lf="396">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_on_Wires">Github</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.md!" target="_blank">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">393-397</span></div>
+            </div>
+          </li>
+        </ul>
+        <div class="block-info" style="display: none;"><span class="line-numbers">387-397</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="386" lf="386"><a name="rlc-and-ac-circuits" number="4.21" lo="386" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits"><span class="hnumber">4.21</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">386</span></div>
+        <h2 lo="398" lf="398" class=""><a name="magnetic-field-of-a-moving-charge" number="4.21" lo="398" raw="## Magnetic Field of a Moving Charge" class="anchor hanchor" href="#magnetic-field-of-a-moving-charge" lf="398"><span class="hnumber">4.21</span>&nbsp;<span class="htext">Magnetic Field of a Moving Charge</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">399</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 lo="400" lf="400"><a name="the-biot-savart-law" number="4.22" lo="400" raw="## The Biot--Savart Law" class="anchor hanchor" href="#the-biot-savart-law" lf="400"><span class="hnumber">4.22</span>&nbsp;<span class="htext">The Biot–Savart Law</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">401</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 lo="402" lf="402"><a name="magnetic-flux" number="4.23" lo="402" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux" lf="402"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">403</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 lo="404" lf="404"><a name="lenz-s-law" number="4.24" lo="404" raw="## Lenz's Law" class="anchor hanchor" href="#lenz-s-law" lf="404"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">405</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 lo="406" lf="406"><a name="rlc-and-ac-circuits" number="4.25" lo="406" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits" lf="406"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">407</span></div>
       </div>
     </div>
   </div>
