cross product and moving charge

--- a/RC_Circuits/RC_Circuits.html
+++ b/RC_Circuits/RC_Circuits.html
@@ -796,7 +796,7 @@
       </div>
       <div class="block">
         <div class="inline-html" lo="58" lf="72">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: block;">
             <div class="block">
               <p padlength="0"><strong type="md">Answer</strong>:</p>
             </div>
@@ -856,7 +856,7 @@ M834 80h400000v40h-400000z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">74</span></div>
       </div>
       <div class="block">
-        <div class="inline-html active" lo="76" lf="76">
+        <div class="inline-html" lo="76" lf="76">
           <img src="figures/Discharging_c.svg?1710768665892">
         </div>
         <div class="block-info" style="display: none;"><span class="line-numbers">76</span></div>
@@ -920,7 +920,7 @@ M834 80h400000v40h-400000z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="100" lf="100" class=""><a name="charging-a-capacitor" number="3" lo="100" raw="# Charging a Capacitor" class="anchor hanchor" href="#charging-a-capacitor" lf="100"><span class="hnumber">3</span>&nbsp;<span class="htext">Charging a Capacitor</span></a></h1>
+        <h1 lo="100" lf="100" class="active"><a name="charging-a-capacitor" number="3" lo="100" raw="# Charging a Capacitor" class="anchor hanchor" href="#charging-a-capacitor" lf="100"><span class="hnumber">3</span>&nbsp;<span class="htext">Charging a Capacitor</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">100</span></div>
       </div>
       <div class="block">
