--- a/index.html
+++ b/index.html
@@ -692,32 +692,32 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-field-of-a-moving-charge" raw="## Magnetic Field of a Moving Charge" lo="398" class="highlighted">
+            <a href="#magnetic-field-of-a-moving-charge" raw="## Magnetic Field of a Moving Charge" lo="398">
               <span class="toctext">Magnetic Field of a Moving Charge</span>
             </a>
           </li>
           <li>
-            <a href="#magnetic-force-on-wires" raw="## Magnetic Force on Wires" lo="400" class="">
-              <span class="toctext">Magnetic Force on Wires</span>
-            </a>
-          </li>
-          <li>
-            <a href="#the-biot-savart-law" raw="## The Biot--Savart Law" lo="414">
+            <a href="#the-biot-savart-law" raw="## The Biot--Savart Law" lo="412">
               <span class="toctext">The Biot–Savart Law</span>
             </a>
           </li>
           <li>
-            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="416">
+            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414">
               <span class="toctext">Magnetic Flux</span>
             </a>
           </li>
           <li>
-            <a href="#lenz-s-law" raw="## Lenz's Law" lo="418">
+            <a href="#magnetic-field-of-a-moving-charge" raw="## Magnetic Field of a Moving Charge" lo="416" class="highlighted">
+              <span class="toctext">Magnetic Field of a Moving Charge</span>
+            </a>
+          </li>
+          <li>
+            <a href="#lenz-s-law" raw="## Lenz's Law" lo="430">
               <span class="toctext">Lenz’s Law</span>
             </a>
           </li>
           <li>
-            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="420">
+            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="432">
               <span class="toctext">RLC and AC Circuits</span>
             </a>
           </li>
@@ -1954,94 +1954,94 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="398" lf="398" class="highlighted"><a name="magnetic-field-of-a-moving-charge" number="4.21" lo="398" raw="## Magnetic Field of a Moving Charge" class="anchor hanchor" href="#magnetic-field-of-a-moving-charge"><span class="hnumber">4.21</span>&nbsp;<span class="htext">Magnetic Field of a Moving Charge</span></a></h2>
+        <h2 lo="398" lf="398"><a name="magnetic-field-of-a-moving-charge" number="4.21" lo="398" raw="## Magnetic Field of a Moving Charge" class="anchor hanchor" href="#magnetic-field-of-a-moving-charge"><span class="hnumber">4.21</span>&nbsp;<span class="htext">Magnetic Field of a Moving Charge</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">398</span></div>
       </div>
       <div class="block">
-        <ul lo="401" lf="411" class="compact">
-          <li markerlength="2" padlength="0" lo="401" lf="406" class="">
+        <ul lo="400" lf="410" class="compact">
+          <li markerlength="2" padlength="0" lo="400" lf="405">
             <div class="block">
-              <p padlength="0" lo="401" lf="401" class="">Activity - Magnetic Force on Wires</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">401</span></div>
+              <p padlength="0" lo="400" lf="400">Activity - Magnetic Force on Wires</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">400</span></div>
             </div>
             <div class="block">
-              <ul lo="402" lf="406" class="compact">
-                <li markerlength="2" padlength="0" lo="402" lf="406" class="">
+              <ul lo="401" lf="405" class="compact">
+                <li markerlength="2" padlength="0" lo="401" lf="405">
                   <div class="block">
-                    <p padlength="0" lo="402" lf="406" class="">Documents: | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.pdf">pdf</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge-solutions.pdf">pdf solns</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html">html</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">402-406</span></div>
+                    <p padlength="0" lo="401" lf="405">Documents: | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.pdf">pdf</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge-solutions.pdf">pdf solns</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">401-405</span></div>
                   </div>
                 </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">402-406</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">401-405</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="407" lf="411" class="">
+          <li markerlength="2" padlength="0" lo="406" lf="412">
             <div class="block">
-              <p padlength="0" lo="407" lf="411" class="active">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Field_of_Moving_Charge">Github</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.md">Markdown</a> | </p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">407-411</span></div>
+              <p padlength="0" lo="406" lf="410">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Field_of_Moving_Charge">Github</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.md!" target="_blank">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">406-410</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">401-411</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">400-410</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="413" lf="413" class=""><a name="magnetic-force-on-wires" number="4.22" lo="413" raw="## Magnetic Force on Wires" class="anchor hanchor" href="#magnetic-force-on-wires" lf="413"><span class="hnumber">4.22</span>&nbsp;<span class="htext">Magnetic Force on Wires</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">413</span></div>
+        <h2 lo="412" lf="412"><a name="the-biot-savart-law" number="4.22" lo="412" raw="## The Biot--Savart Law" class="anchor hanchor" href="#the-biot-savart-law"><span class="hnumber">4.22</span>&nbsp;<span class="htext">The Biot–Savart Law</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">412</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 lo="414" lf="414"><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">414</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 lo="416" lf="416" class="highlighted"><a name="magnetic-field-of-a-moving-charge" number="4.24" lo="416" raw="## Magnetic Field of a Moving Charge" class="anchor hanchor" href="#magnetic-field-of-a-moving-charge"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Magnetic Field of a Moving Charge</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">416</span></div>
       </div>
       <div class="block">
-        <ul lo="415" lf="425" class="compact">
-          <li markerlength="2" padlength="0" lo="415" lf="420">
+        <ul lo="418" lf="428" class="compact">
+          <li markerlength="2" padlength="0" lo="418" lf="423" class="">
             <div class="block">
-              <p padlength="0" lo="415" lf="415" class="">Activity - Magnetic Force on Wires</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">421-427</span></div>
+              <p padlength="0" lo="418" lf="418" class="">Activity - Magnetic Force on Wires</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">418</span></div>
             </div>
             <div class="block">
-              <ul lo="416" lf="420" class="compact">
-                <li markerlength="2" padlength="0" lo="416" lf="420">
+              <ul lo="419" lf="423" class="compact">
+                <li markerlength="2" padlength="0" lo="419" lf="423" class="">
                   <div class="block">
-                    <p padlength="0" lo="416" lf="420" class="">Documents: | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.pdf">pdf</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html">html</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">421-427</span></div>
+                    <p padlength="0" lo="419" lf="423" class="">Documents: | <a href="Magnetic_Flux/Magnetic_Flux.pdf">pdf</a> | <a href="Magnetic_Flux/Magnetic_Flux-solutions.pdf">pdf solns</a> | <a href="Magnetic_Flux/Magnetic_Flux.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">419-423</span></div>
                   </div>
                 </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">421-427</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">419-423</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="421" lf="427" class="">
+          <li markerlength="2" padlength="0" lo="424" lf="428" class="">
             <div class="block">
-              <p padlength="0" lo="421" lf="425" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_on_Wires">Github</a> | <a href="Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.md!" target="_blank">Markdown</a> | </p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">421-425</span></div>
+              <p padlength="0" lo="424" lf="428" class="active">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Flux">Github</a> | <a href="Magnetic_Flux/Magnetic_Flux.md">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">424-428</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">415-425</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">418-428</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="427" lf="427" class=""><a name="the-biot-savart-law" number="4.23" lo="427" raw="## The Biot--Savart Law" class="anchor hanchor" href="#the-biot-savart-law" lf="427"><span class="hnumber">4.23</span>&nbsp;<span class="htext">The Biot–Savart Law</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">427</span></div>
+        <h2 lo="430" lf="430" class=""><a name="lenz-s-law" number="4.25" lo="430" raw="## Lenz's Law" class="anchor hanchor" href="#lenz-s-law"><span class="hnumber">4.25</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">430</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="429" lf="429"><a name="magnetic-flux" number="4.24" lo="429" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux" lf="429"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">429</span></div>
-      </div>
-    </div>
-    <div class="section">
-      <div class="block">
-        <h2 lo="431" lf="431"><a name="lenz-s-law" number="4.25" lo="431" raw="## Lenz's Law" class="anchor hanchor" href="#lenz-s-law" lf="431"><span class="hnumber">4.25</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">431</span></div>
-      </div>
-    </div>
-    <div class="section">
-      <div class="block">
-        <h2 lo="433" lf="433"><a name="rlc-and-ac-circuits" number="4.26" lo="433" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits" lf="433"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">433</span></div>
+        <h2 lo="432" lf="432"><a name="rlc-and-ac-circuits" number="4.26" lo="432" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">432</span></div>
       </div>
     </div>
   </div>
